--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,30 +12,30 @@
     <string name="home_wearable">Wearable &amp; Gadgets</string>
     <string name="home_accessories">Accessories</string>
     <string name="schedule">HDL Schedule</string>
-    <string name="compare">เปรียบเทียบ</string>
+    <string name="compare">Compare</string>
     <string name="change">Change Language to Thai</string>
-    <string name="help">ช่วยเหลือ</string>
+    <string name="help">Help</string>
 
     <!-- Category -->
-    <string name="category">หมวดหมู่ในการเลือกซื้อสินค้า</string>
+    <string name="category">Category Shopping</string>
     <!-- Search -->
-    <string name="search_hint">ค้นหา</string>
+    <string name="search_hint">Search</string>
     <!-- ProductList -->
     <string name="baht">฿</string>
-    <string name="product_overview">ข้อมูลสินค้า</string>
-    <string name="product_available">ดูสาขาที่มีสินค้า</string>
-    <string name="product_compare">เปรียบเทียบสินค้า</string>
+    <string name="product_overview">Overview</string>
+    <string name="product_available">Available Store</string>
+    <string name="product_compare">Add To Compare</string>
     <string name="product_read">Read More >></string>
-    <string name="product_promotion">โปรโมชั่น</string>
-    <string name="product_spec">คุณลักษณะ</string>
+    <string name="product_promotion">Promotion</string>
+    <string name="product_spec">Specification</string>
     <string name="product_delivery">Delivery / Warranty / Refund</string>
-    <string name="product_stock">มีสินค้า</string>
+    <string name="product_stock">in stock</string>
+    <string name="product_out_stock">out of stock</string>
     <string name="product_stock_more">จำนวนสินค้าในคลัง: มาก</string>
     <string name="product_stock_medium">จำนวนสินค้าในคลัง: ปานกลาง</string>
     <string name="product_stock_less">จำนวนสินค้าในคลัง: น้อย</string>
-    <string name="product_out_stock">สินค้าหมด</string>
     <string name="filter_count">(%1$s)</string>
-    <string name="brand">แบรนด์</string>
+    <string name="brand">Brand</string>
 
     <!-- Product Detail -->
     <string name="promotion_header">รับประสบการณ์เหนือจินตนาการกับ FUJIFILM เมื่อแบ่งจ่ายด้วยบัตรเครดิต SCB นาน 10 เดือน</string>
@@ -44,20 +44,20 @@
     <string name="spec_product">คุณสมบัติ</string>
     <string name="book_time">จองเวลานัดส่งสินค้า</string>
     <string name="hdl_url">http://hdl.powerbuy.co.th/Users/Login</string>
-    <string name="ok">ตกลง</string>
-    <string name="cancel">ยกเลิก</string>
-    <string name="product_code">รหัสสินค้า: </string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="product_code">Product sku: </string>
     <string name="the_1_card">Redeem your point %1$,d points</string>
     <string name="alert_compare">มีการเพิ่มสินค้า</string>
     <string name="alert_compare_yes">\nเรียบร้อยแล้ว</string>
     <string name="alert_count">จำนวนสินค้ามากกว่าที่ Store กำหนด</string>
     <string name="alert_stock">สินค้าไม่มีในคลังสินค้า</string>
-    <string name="add_to_cart">ใส่รถเข็น</string>
-    <string name="tab_promotion">โปรโมชั่นและของแถม</string>
-    <string name="tab_delivery">ตัวเลือกการจัดส่ง</string>
+    <string name="add_to_cart">Add to cart</string>
+    <string name="tab_promotion">Promotion and Freebie</string>
+    <string name="tab_delivery">Delivery Option</string>
 
     <!-- Compare -->
-    <string name="compare_header">เปรียบเทียบสินค้า</string>
+    <string name="compare_header">Compare Products</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -67,55 +67,55 @@
     <string name="search_result_header">search result for</string>
 
     <!-- Store -->
-    <string name="select_store">เลือกสาขา</string>
-    <string name="store_avaliable">สาขาที่มีอยู่</string>
-    <string name="store_code">รหัสสาขา</string>
-    <string name="store_name">ชื่อสาขา</string>
-    <string name="address">ที่อยู่</string>
-    <string name="stock">จำนวนสินค้าในสาขา</string>
-    <string name="telephone">เบอร์ติดต่อ</string>
+    <string name="select_store">Select Store</string>
+    <string name="store_avaliable">Available Store</string>
+    <string name="store_code">Store code</string>
+    <string name="store_name">Store name</string>
+    <string name="address">Address</string>
+    <string name="stock">Product In Stock</string>
+    <string name="telephone">tel.</string>
 
     <!-- Drawer -->
     <string name="drawer_delivery">Delivery Schedule</string>
-    <string name="drawer_compare">เปรียบเทียบสินค้า</string>
+    <string name="drawer_compare">Compare Product</string>
     <string name="drawer_change">เปลี่ยนภาษา</string>
-    <string name="drawer_cart">รถเข็น</string>
-    <string name="drawer_history">ประวัติการสร้างรายการ</string>
-    <string name="drawer_help">ช่วยเหลือ</string>
-    <string name="drawer_logout">ออกจากระบบ</string>
+    <string name="drawer_cart">Cart</string>
+    <string name="drawer_history">History Order</string>
+    <string name="drawer_help">Help</string>
+    <string name="drawer_logout">Logout</string>
 
     <!-- AppSecret -->
     <string name="secret">djZtdHRZck9rTDdKVGhkZWF3NEdlN2FDR0JRQlQ0aFovQ0ViWktCNnd2eG5UQUVneFdpVDJRPT0=</string>
     <string name="url_hdl">http://10.5.0.31/HDLAPI/Token/CreateToken</string>
 
     <!-- Date -->
-    <string name="sun">SUN</string>
-    <string name="mon">MON</string>
-    <string name="tue">TUE</string>
-    <string name="wed">WED</string>
-    <string name="thu">THU</string>
-    <string name="fri">FRI</string>
-    <string name="sat">SAT</string>
+    <string name="sun">อา</string>
+    <string name="mon">จ</string>
+    <string name="tue">อ</string>
+    <string name="wed">พ</string>
+    <string name="thu">พฤ</string>
+    <string name="fri">ศ</string>
+    <string name="sat">ส</string>
     <string name="last_date">30</string>
-    <string name="time_9am_to_half_9am">09:00 - 09:30</string>
-    <string name="time_half_9am_to_10am">09:30 - 10:00</string>
-    <string name="time_10am_to_half_10am">10:00 - 10:30</string>
-    <string name="time_half_10am_to_11am">10:30 - 11:00</string>
-    <string name="time_11am_to_half_11am">11:00 - 11:30</string>
-    <string name="time_half_11am_to_12pm">11:30 - 12:00</string>
-    <string name="time_1pm_to_half_1pm">13:00 - 13:30</string>
-    <string name="time_half_1pm_to_2pm">13:30 - 14:00</string>
-    <string name="time_2pm_to_half_2pm">14:00 - 14:30</string>
-    <string name="time_half_2pm_to_3pm">14:30 - 15:00</string>
-    <string name="time_3pm_to_half_3pm">15:00 - 15:30</string>
-    <string name="time_half_3pm_to_4pm">15:30 - 16:00</string>
-    <string name="time_4pm_to_half_4pm">16:00 - 16:30</string>
-    <string name="time_half_4pm_to_5pm">16:30 - 17:00</string>
-    <string name="time_5pm_to_half_5pm">17:00 - 17:30</string>
-    <string name="time_half_5pm_to_6pm">17:30 - 18:00</string>
-    <string name="time_6pm_to_half_6pm">18:00 - 18:30</string>
-    <string name="time_half_6pm_to_7pm">18:30 - 19:00</string>
-    <string name="time_7pm_to_half_7pm">19:00 - 19:30</string>
+    <string name="time_9am_to_half_9am" translatable="false">09:00 - 09:30</string>
+    <string name="time_half_9am_to_10am" translatable="false">09:30 - 10:00</string>
+    <string name="time_10am_to_half_10am" translatable="false">10:00 - 10:30</string>
+    <string name="time_half_10am_to_11am" translatable="false">10:30 - 11:00</string>
+    <string name="time_11am_to_half_11am" translatable="false">11:00 - 11:30</string>
+    <string name="time_half_11am_to_12pm" translatable="false">11:30 - 12:00</string>
+    <string name="time_1pm_to_half_1pm" translatable="false">13:00 - 13:30</string>
+    <string name="time_half_1pm_to_2pm" translatable="false">13:30 - 14:00</string>
+    <string name="time_2pm_to_half_2pm" translatable="false">14:00 - 14:30</string>
+    <string name="time_half_2pm_to_3pm" translatable="false">14:30 - 15:00</string>
+    <string name="time_3pm_to_half_3pm" translatable="false">15:00 - 15:30</string>
+    <string name="time_half_3pm_to_4pm" translatable="false">15:30 - 16:00</string>
+    <string name="time_4pm_to_half_4pm" translatable="false">16:00 - 16:30</string>
+    <string name="time_half_4pm_to_5pm" translatable="false">16:30 - 17:00</string>
+    <string name="time_5pm_to_half_5pm" translatable="false">17:00 - 17:30</string>
+    <string name="time_half_5pm_to_6pm" translatable="false">17:30 - 18:00</string>
+    <string name="time_6pm_to_half_6pm" translatable="false">18:00 - 18:30</string>
+    <string name="time_half_6pm_to_7pm" translatable="false">18:30 - 19:00</string>
+    <string name="time_7pm_to_half_7pm" translatable="false">19:00 - 19:30</string>
 
     <!--API-->
     <!--<string name="product_list">items[id,sku,name,attribute_set_id,status,extension_attributes[description,image,by_store,brand]],total_count</string>-->
@@ -201,8 +201,8 @@
     <string name="name_user_order">ชื่อลูกค้า: </string>
     <string name="receiver_name">ชื่อผู้รับ: </string>
     <string name="order_date_history">วันที่สั่งซื้อ: </string>
-    <string name="product">สินค้า</string>
-    <string name="sort">เรียง</string>
+    <string name="product">Product</string>
+    <string name="sort">Sort</string>
     <string name="regular_price">ราคาปกติ: </string>
     <string name="can_not_show_spec">ไม่สามารถแสดงลักษณะของสินค้าได้ในขณะนี้</string>
     <string name="user_logout">คุณต้องการจะออกจากระบบใช่หรือไม่</string>
