--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,14 +125,13 @@
     <string name="url_image">https://prod.powerbuy.co.th/media/catalog/product</string>
 
     <!--Login-->
-    <string name="username">ชื่อผู้ใช้</string>
-    <string name="password">รหัสผ่าน</string>
-    <string name="login">เข้าสู่ระบบ</string>
-    <string name="loading">กำลังโหลด...</string>
-    <string name="user_not_found">รหัสผู้ใช้หรือรหัสผ่านไม่ถูกต้อง</string>
-    <string name="not_connected_network">ไม่สามารถเชื่อมต่ออินเทอร์เน็ตได้ในขณะนี้ กรุณาลองใหม่อีกครั้ง</string>
-    <string name="server_not_found">ไม่สามารถเชื่อมต่อเซิฟเวอร์ได้ในขณะนี้ กรุณาลองใหม่ภายหลัง</string>
-
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="loading">Loading...</string>
+    <string name="user_not_found">Invalid username or password.</string>
+    <string name="not_connected_network">Cannot connect to the Internet.</string>
+    <string name="server_not_found">Cannot connect to the server.</string>
 
     <!--Payment-->
     <string name="payment_header">ชำระเงิน</string>
@@ -215,7 +214,7 @@
     <string name="add_over_qty">สินค้าไม่เพียงพอ</string>
     <string name="title_free_item">ฟรีของแถม</string>
     <string name="shopping_delete"><u>ลบ</u></string>
-    <string name="t1_points">เมื่อซื้อ รับคะแนนเดอะวัน %d คะแนน</string>
+    <string name="t1_points">Earn %d points with your The 1</string>
 
     <!-- Error -->
     <string name="error_form_empty_data">กรุณากรอกข้อมูลสำคัญของคุณ</string>
