--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -171,6 +171,7 @@
     <string name="label_billing_address">ใบกำกับภาษี/ที่อยู่</string>
     <string name="label_shipping_type">บริการจัดส่ง</string>
     <string name="label_delivery_info">วิธีการจัดส่ง</string>
+    <string name="delivery_price">ค่าส่ง</string>
 
     <!-- Shared Preference -->
     <string name="preference_file_name">pwb_app_preference</string>
