--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,17 +217,17 @@
     <string name="t1_points">Earn %d points with your The 1</string>
 
     <!-- Error -->
-    <string name="error_form_empty_data">กรุณากรอกข้อมูลสำคัญของคุณ</string>
+    <string name="error_form_empty_data">Required</string>
     <string name="error_form_email_pattern_not_match">Please enter valid email</string>
-    <string name="error_form_password_too_short">รหัสผ่านต้องมากกว่า %d ตัวอักษร</string>
-    <string name="error_form_confirmation_password_not_matched">ยืนยันรหัสผ่านไม่ถูกต้อง</string>
-    <string name="error_form_phone_number_invalid">เบอร์โทรศัพท์ไม่ถูกต้อง</string>
-    <string name="error_form_has_special">ข้อมูลจะต้องไม่มีสัญลักษณ์พิเศษ</string>
-    <string name="error_form_name">ชื่อหรือนามสกุลจะต้องไม่มีสัญลักษณ์พิเศษ และตัวเลข</string>
-    <string name="error_form_password_not_correctly">อย่างน้อย 9 ตัว ประกอบด้วยตัวพิมพ์ใหญ่ พิมพ์เล็ก และตัวเลข</string>
-    <string name="error_form_passport_invalid">พาสปอร์ตไม่ถูกต้อง</string>
+    <string name="error_form_password_too_short">Password must be at least %d characters</string>
+    <string name="error_form_confirmation_password_not_matched">Passwords do not match.</string>
+    <string name="error_form_phone_number_invalid">Invalid phone no.</string>
+    <string name="error_form_has_special">Information can not be special symbols</string>
+    <string name="error_form_name">First or last name must not contain numbers or symbols.</string>
+    <string name="error_form_password_not_correctly">at least 9 characters: uppercase,lowercase,numerics</string>
+    <string name="error_form_passport_invalid">Incorrect Passport</string>
     <string name="error_form_name_en">Invalid name</string>
-    <string name="error_verify_otp_time_out">ขออภัยการเชื่อมต่อผิดพลาด</string>
+    <string name="error_verify_otp_time_out">Sorry connection error</string>
     <string name="delivery">Arrange Delivery</string>
     <string name="select_store_title">Choose store to collect from</string>
     <string name="store_address">Store address</string>
