--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,4 +270,10 @@
     <string name="home_delivery">Home delivery</string>
     <string name="collect">Collect at store</string>
     <string name="between15_20">Reaches customer between 15:00–20:00</string>
+
+    <!-- Popup sort -->
+    <string name="low_to_high">Price : Low to High</string>
+    <string name="high_to_low">Price : High to Low</string>
+    <string name="a_to_z">Brand : Name(A-Z)</string>
+    <string name="z_to_a">Brand : Name(Z-A)</string>
 </resources>
