--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,6 +214,7 @@
     <string name="title_free_item">Free items</string>
     <string name="shopping_delete"><u>Delete</u></string>
     <string name="t1_points">Earn %d points with your The 1</string>
+    <string name="check_out">Check out</string>
 
     <!-- Error -->
     <string name="error_form_empty_data">Required</string>
