--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,7 +127,7 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="loading">Loading...</string>
-    <string name="user_not_found">Invalid username or password.</string>
+    <string name="user_not_found">Please enter valid username and password.</string>
     <string name="not_connected_network">Cannot connect to the Internet.</string>
     <string name="server_not_found">Cannot connect to the server.</string>
 
